Klasa Game oraz poczatek menu wyboru i rozgrywki

--- a/minesweeper/CMakeLists.txt
+++ b/minesweeper/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.28.0)
 
 project(Minesweeper)
 
-include_directories(Field.hpp Tile.hpp)
+include_directories(Field.hpp Tile.hpp Game.hpp)
 
-add_executable(${PROJECT_NAME} main.cpp Tile.cpp)
+add_executable(${PROJECT_NAME} main.cpp Tile.cpp Game.cpp)
